Bug 258358 - the box with detailed info disappears
Summary: the box with detailed info disappears
Status: RESOLVED FIXED
Alias: None
Product: massif-visualizer
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: master
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.1
Assignee: Massif Visualizer developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-30 12:02 UTC by jamokoo
Modified: 2010-12-23 18:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jamokoo 2010-11-30 12:02:17 UTC
Version:           master
OS:                Linux

when moving the box with snapshot info outside the program window and then closing the program and starting it again the box is missing.

Reproducible: Didn't try
Comment 1 Milian Wolff 2010-12-23 18:29:26 UTC
commit 320210bb7ff824024b0218172da8fc4e6ca00433
branch master
Author: Milian Wolff <mail@milianw.de>
Date:   Thu Dec 23 18:28:37 2010 +0100

    make it possible to re-add the data tree dock widget via the menu
    
    BUG: 258358

diff --git a/app/mainwindow.cpp b/app/mainwindow.cpp
index f78cdf5..c39de0e 100644
--- a/app/mainwindow.cpp
+++ b/app/mainwindow.cpp
@@ -254,6 +254,9 @@ void MainWindow::setupActions()
     stackNumLayout->addWidget(box);
     stackNumWidget->setLayout(stackNumLayout);
     stackNumAction->setDefaultWidget(stackNumWidget);
+
+    //dock actions
+    actionCollection()->addAction("toggleDataTree", ui.dataTreeDock->toggleViewAction());
 }
 
 void MainWindow::openFile()
diff --git a/app/massif-visualizerui.rc b/app/massif-visualizerui.rc
index b6c8c65..abd23dc 100644
--- a/app/massif-visualizerui.rc
+++ b/app/massif-visualizerui.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="massif-visualizer" version="4">
+<kpartgui name="massif-visualizer" version="5">
 
 <MenuBar>
   <Menu name="file" noMerge="1"><text>&amp;File</text>
@@ -25,6 +25,9 @@
 
   <Menu name="settings"><text>&amp;Settings</text>
     <Merge name="StandardToolBarMenuHandler" />
+    <Menu name="dockWidgets"><text>&amp;Dock Widgets</text>
+        <Action name="toggleDataTree" />
+    </Menu>
     <DefineGroup name="show_toolbar_merge" />
     <Action name="set_configure_toolbars" />
     <Action name="settings_configure" />