make it possible to re-add the data tree dock widget via the menu

BUG: 258358